--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css" />
 		<link rel="stylesheet" href="bower_components/angularjs-slider/dist/rzslider.css" />
 		<link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+		<link rel="stylesheet" type="text/css" href="fonts/font-awesome.min.css">
 	</head>
 	<body ng-app="evtviewer"
 		ng-controller="InterfaceCtrl"
