Add angular-pretty-xml bower dependency and reset prettyXml pipe

--- a/app/src/analoguesApparatusEntry/analoguesApparatusEntry.directive.tmpl.html
+++ b/app/src/analoguesApparatusEntry/analoguesApparatusEntry.directive.tmpl.html
@@ -67,7 +67,7 @@
                 </div-->
                 <div ng-switch-when="xmlSource">
                      <span class="xml-title"> {{ 'ANALOGUES.XML_SOURCE_FOR' | translate}} {{ 'ANALOGUES.ANALOGUE' | translate}} </span>
-                     <pre>{{ ::vm.xml }}</pre>
+                     <pre>{{ ::vm.xml | prettyXml}}</pre>
                      <span class="xml-title">
                          {{ 'ANALOGUES.XML_SOURCE_FOR' | translate}} 
                          <span compile="vm.getActiveSourceAbbr(vm._activeSource)">
